@@ -1,13 +1,0 @@
-<h1 class="title">Keep in contact with Pidgin IM</h1>
-
-<div class="main">
-
-<div class="content"><ul>
-	<li>Pidgin IM is Ubuntu's instant messaging tool.</li>
-	<li>Pidgin connects to all the major IM networks, so you only ever need to learn one interface.</li>
-	<li>Plugins let you adapt Pidgin to your personal requirements.</li>
-</ul></div>
-
-</div>
-
-<img class="icon" src="icons/pidgin.png" alt="" />
